WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213660
CRASH: incompatible downcast<> operation in SourceBufferPrivateAVFObjC::setCDMInstance()
https://bugs.webkit.org/show_bug.cgi?id=213660
Summary
CRASH: incompatible downcast<> operation in SourceBufferPrivateAVFObjC::setCD...
Jer Noble
Reported
2020-06-26 14:24:28 PDT
CRASH: incompatible downcast<> operation in SourceBufferPrivateAVFObjC::setCDMInstance()
Attachments
Patch
(5.25 KB, patch)
2020-06-26 14:33 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-06-26 14:26:43 PDT
<
rdar://problem/63831593
>
Jer Noble
Comment 2
2020-06-26 14:33:22 PDT
Created
attachment 402904
[details]
Patch
Peng Liu
Comment 3
2020-06-26 15:03:28 PDT
Comment on
attachment 402904
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402904&action=review
> LayoutTests/platform/mac/media/encrypted-media/fps-clearkey-crash.html:1 > +<html>
Nit. <!DOCTYPE html> is missing.
EWS
Comment 4
2020-06-26 16:38:36 PDT
Committed
r263601
: <
https://trac.webkit.org/changeset/263601
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402904
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug