CRASH: incompatible downcast<> operation in SourceBufferPrivateAVFObjC::setCDMInstance() https://bugs.webkit.org/show_bug.cgi?id=213660 <rdar://problem/63831593>

Reviewed by Eric Carlson.

Source/WebCore:

Test: platform/mac/media/encrypted-media/fps-clearkey-crash.html

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::setCDMInstance):

LayoutTests:

* platform/mac/media/encrypted-media/fps-clearkey-crash-expected.txt: Added.
* platform/mac/media/encrypted-media/fps-clearkey-crash.html: Added.


Canonical link: https://commits.webkit.org/226469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263601 268f45cc-cd09-0410-ab3c-d52691b4dbfc